the beginning of changes